applications/overlays/hcloud-robot/transmission-tv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-tv-ingress
  namespace: media
  annotations:
    'external-dns.alpha.kubernetes.io/hostname': 'transmission-tv.macro.network'
    'external-dns.alpha.kubernetes.io/cloudflare-proxied': 'true'
    'traefik.ingress.kubernetes.io/router.entrypoints': 'websecure'
spec:
  tls:
    - hosts:
        - transmission-tv.macro.network
  rules:
    - host: transmission-tv.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-tv
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-tv-flood-ingress
  namespace: media
  annotations:
    'external-dns.alpha.kubernetes.io/hostname': 'flood-tv.macro.network'
    'external-dns.alpha.kubernetes.io/cloudflare-proxied': 'true'
    'traefik.ingress.kubernetes.io/router.entrypoints': 'websecure'
spec:
  tls:
    - hosts:
        - flood-tv.macro.network
  rules:
    - host: flood-tv.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-tv-flood
                port:
                  number: 3001
